# income-and-expenses-calculator

./: Cargo.toml  README.md
database/: rust-inc-exp.sql
rust_to_mysql/: Cargo.toml
rust_to_mysql/src/: main.rs
src/: main.rs
ui/: appsettings.slint  appwindow.slint
